# libpeakpick

./: CMakeLists.txt  README.md  main.cpp
libpeakpick/: analyse.h  baseline.h  deconvulate.h  glfit.h  mathhelper.h  nxlinregress.h  peakpick.h  savitzky.h  spectrum.h
samples/: lorentzian_1  lorentzian_2
src/: testLorentzian.cpp  testLorentzian.h
